added profile pics.

--- a/about/index.html
+++ b/about/index.html
@@ -96,14 +96,14 @@
           <h3>Steering Committee</h3>
             <div class="about-officer-row">
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="http://www.elbagarza.com/">Elba Garza</a> </br>Texas A&M University</p>
+                <img src="images/sc/Elba.jpeg" alt="Elba" style="width: 70%">
+                <p style="margin-top: 10px"><a href="http://www.elbagarza.com/">Elba Garza</a> </br>Texas A&M University</p>
 <!--                 <p>Email, Affiliation</p> -->
               </div>
 
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="https://pothukuchi.web.illinois.edu/">Raghavendra Pradyumna Pothukuchi</a></br>University of Illinois at Urbana-Champaign</p> 
+                <img src="images/sc/Raghavendra.jpg" alt="" style="width:72%">
+                <p style="margin-top: 10px"><a href="https://pothukuchi.web.illinois.edu/">Raghavendra Pradyumna Pothukuchi</a></br>University of Illinois at Urbana-Champaign</p> 
               </div>
 
             </div>
@@ -111,54 +111,54 @@
             <div class="about-officer-row">
 
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="http://amahmou2.web.engr.illinois.edu/">Abdulrahman Mahmoud</a> </br>University of Illinois at Urbana-Champaign</p>
+                <img src="images/sc/Abdulrahman.jpg" alt="" style="width:70%">
+                <p style="margin-top: 10px"><a href="http://amahmou2.web.engr.illinois.edu/">Abdulrahman Mahmoud</a> </br>University of Illinois at Urbana-Champaign</p>
               </div>
 
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="web.eecs.umich.edu/~aporvaa">Aporva Amarnath</a></br>University of Michigan, Ann Arbor</p>
+                <img src="images/sc/Aporva.jpeg" alt="" style="width:71%">
+                <p style="margin-top: 10px"><a href="web.eecs.umich.edu/~aporvaa">Aporva Amarnath</a></br>University of Michigan, Ann Arbor</p>
               </div>
 
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href=" https://www.linkedin.com/in/georgiostziantzioulis/">Georgios Tziantzioulis</a> </br>Princeton University</p>
-              </div>
-            </div>
-
-            <div class="about-officer-row">
-
-              <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="https://sites.google.com/site/gururajshome/home">Gururaj Saileshwar</a> </br>Georgia Institute of Technology</p>
-              </div>
-
-              <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="http://www.cs.utah.edu/~sarab/">Sarabjeet Singh</a></br>University of Utah</p> 
-              </div>
-
-              <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="https://subhankarpal.com"> Subhankar Pal</a> </br>University of Michigan, Ann Arbor</p> 
+                <img src="images/sc/Georgios.png" alt="" style="width:71%">
+                <p style="margin-top: 10px"><a href=" https://www.linkedin.com/in/georgiostziantzioulis/">Georgios Tziantzioulis</a> </br>Princeton University</p>
               </div>
             </div>
 
             <div class="about-officer-row">
 
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="https://tcxxxx.github.io/">Tiancheng Xu</a> </br>Rice University</p>
-              </div>
-              
-              <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="https://liuty10.github.io">Tianyi Liu</a> </br>The University of Texas at San Antonio</p>
+                <img src="images/sc/Gururaj.jpg" alt="" style="width:70%">
+                <p style="margin-top: 10px"><a href="https://sites.google.com/site/gururajshome/home">Gururaj Saileshwar</a> </br>Georgia Institute of Technology</p>
               </div>
 
               <div class="about-officer-column">
-                <img src="images/avatar.jpg" alt="No Photo" style="width:70%">
-                <p><a href="https://ugupta.com/">Udit Gupta</a> </br>Harvard University</p>
+                <img src="images/sc/Sarabjeet.jpg" alt="" style="width:71%">
+                <p style="margin-top: 10px"><a href="http://www.cs.utah.edu/~sarab/">Sarabjeet Singh</a></br>University of Utah</p> 
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/sc/Subhankar.jpeg" alt="" style="width:70%">
+                <p style="margin-top: 10px"><a href="https://subhankarpal.com"> Subhankar Pal</a> </br>University of Michigan, Ann Arbor</p> 
+              </div>
+            </div>
+
+            <div class="about-officer-row">
+
+              <div class="about-officer-column">
+                <img src="images/sc/Tiancheng.jpg" alt="" style="width:70%">
+                <p style="margin-top: 10px"><a href="https://tcxxxx.github.io/">Tiancheng Xu</a> </br>Rice University</p>
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/sc/Tianyi.jpg" alt="" style="width:70%">
+                <p style="margin-top: 10px"><a href="https://liuty10.github.io">Tianyi Liu</a> </br>The University of Texas at San Antonio</p>
+              </div>
+
+              <div class="about-officer-column">
+                <img src="images/sc/Udit.jpg" alt="No Photo" style="width:71%">
+                <p style="margin-top: 10px"><a href="https://ugupta.com/">Udit Gupta</a> </br>Harvard University</p>
               </div>
             </div>
 
