--- a/about/index.html
+++ b/about/index.html
@@ -43,11 +43,21 @@
     </div>
 
     <main role="main" class="container">
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Vision</h3>
+          <p>Computer Architecture Student Association (CASA) is a student-run organization in the computer architecture community with the goals of ensuring student wellbeing and fostering a sense of belonging. Founded by students for students, CASA aims to nurture a vibrant, inviting and productive student community. 
+          </p>
+        </div>
+      </div>
+
+      <hr />
+
       <div class="row">
         <div class="col-md-12">
           <h3>Mission Statement</h3>
-          <p>The Computer Architecture Student Association (CASA) is an independent student-run organization with the express purpose of developing and fostering a positive and inviting student community within computer architecture. Created by students for students, CASA aims to support the student community throughout the demanding years of academic study. <br><br>
-          The purpose of CASA is to serve both as a community and a resource for computer architecture students. CASA aims to be a safe place—one where students can openly share concerns with regards to the many difficult (yet little discussed) academic situations they encounter. Students can gain quality insight from their peers and foster both academic and social connections.  
+          <p>CASA engages in several initiatives targeted towards student wellbeing. These include student mentoring activities, townhalls and events to raise awareness about student wellbeing, and events for socializing and building connections. CASA also aims to be a safe place—one where students can share concerns with regards to the many difficult yet little discussed academic situations they might face. The purpose of CASA is to serve computer architecture students both as a community and a resource.  
           </p>
         </div>
       </div>
@@ -57,8 +67,9 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Community Member Responsibility</h3>
-          <p>CASA is you. What we as students put into CASA is what we can get back. That said, a student’s first responsibility is always their academic course/program work. While we wish students to be active participants, it should not be to the detriment of their academic work. <br><br>
-          In fact, we aim for the opposite. We hope CASA to be complementary to a student’s academic experience—it should help connect students with their peers for academic and social support. 
+          <p>CASA is you. What we as students put into CASA is what we can get back. That said, a student’s first responsibility is always their academic course/program work. While we wish students to be active participants, it should not be to the detriment of their academic work.
+          <br><br>
+          In fact, we aim for the opposite. We hope CASA to be complementary to a student’s academic experience—it should help connect students with their peers for academic and social support. Our goal is to have happy and productive students. 
           </p>
         </div>
       </div>
@@ -68,15 +79,9 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Community Member Eligibility</h3>
-          <p>There are no strict eligibility requirements to be part of CASA. However, the community is geared toward graduate (and undergraduate) students in the academic research area of computer architecture. Once a student has graduated from their program/institution, there is no requirement to stop participating in CASA activities or an inability to attend events it holds. “Graduation” out of CASA is up to the student to graduate her/himself.</p>
-          <!-- <ul>
-              <li><h4>Committee member responsibilities</h4>
-                <p></p>
-              </li>
-              <li><h4>Ethics and conflicts of Interest</h4>
-                <p></p>
-              </li>
-            </ul> -->
+          <p>There are no strict eligibility requirements to be part of CASA. However, the community is geared toward graduate (and undergraduate) students in the academic research area of computer architecture.
+          Even after graduation, students can continue to participate in CASA’s activities. Some of CASA’s active volunteers are no longer students. In fact, one of the goals of CASA is to engage at multiple levels of our community for student wellbeing. So, we welcome members who have graduated.
+        </p>
         </div>
       </div>
 
@@ -84,8 +89,23 @@
 
       <div class="row">
         <div class="col-md-12">
+          <h3>Reporting</h3>
+          <p>CASA serves as a place of support for students in computer architecture research. However, there are limitations to its abilities. While the CASA community can help students via discussion, resources, and community suggestions, CASA cannot itself take action for students.
+          <br><br>
+          If a serious matter warrants reporting, the student experiencing the matter must themselves raise a complaint to their home institution, where it will be handled according to institutional policies. CASA cannot serve as an intermediary in any institutional process and cannot be involved in any aspect of the handling of a complaint. 
+          </p>
+        </div>
+      </div>
+
+      <hr />
+
+
+      <div class="row">
+        <div class="col-md-12">
           <h3>History</h3>
-          <p>The creation of CASA was spurred by events in mid-to-late 2019. First, the unnecessary loss of a student in our community raised questions and concerns about the health and state of our computer architecture graduate students. At the MICRO 2019 business meeting, graduate students vocally expressed frustration about their perceived lack of academic and personal support within their institutions and out. Interest in the creation of a student community was gauged at subsequent computer architecture conferences through 2020, with positive feedback received. Today, with the help of student volunteers, CASA is becoming a reality.</p>
+          <p>The creation of CASA was spurred by events that began in 2019, when concerns about the wellbeing of students in the community were beginning to come to the fore. Around this time, a fellow student took his life owing to stressful circumstances. This tragic event shocked the community and highlighted the urgent need to focus on the general wellbeing of our graduate students.
+          <br><br>
+          At the MICRO 2019 business meeting, graduate students voiced their frustration about their perceived lack of support for the many issues they faced. This episode was followed with several conversations among fellow students, senior members and the chairs of the architecture committees. A proposal for ensuring student wellbeing was shared with our community members, which included the setting up of an organization that focused on student wellbeing. Today, with the help of student volunteers and support from senior members, CASA is a reality.</p>
         </div>
       </div>
 
