updated post title.

--- a/resources/post-1018.html
+++ b/resources/post-1018.html
@@ -45,7 +45,7 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Blog Posts by CASA</h3>
+          <h3>Welcome to CASA!</h3>
           <p>by Raghavendra Pradyumna Pothukuchi and Elba Garza on Oct 18, 2020</p>
           <p>We are very excited to bring to you the first blog post of CASA! There has been a lot of work in setting up CASA, and several people have worked hard for it, and here we are, finally! CASA is founded so that we, students, become a strong, healthy, happy and productive community. Yes, those are many adjectives to strive for and that is why we have CASA. 
           <br><br>
