--- a/resources/index.html
+++ b/resources/index.html
@@ -46,10 +46,14 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Blog Posts by CASA</h3>
-
           <ul>
-            <li><a href="resources/post-1018.html">Welcome Message</a></li>
+            <li>
+              <p style="font-size: 20px"><a href="resources/post-1018.html">“Welcome to CASA!”</a>, Oct 18, 2020</p>
+            </li>
           </ul>
+<!--           <ul>
+            <li><a href="resources/post-1018.html">“Welcome to CASA!”</a></li>
+          </ul> -->
 
           <!--
           <h4>Featured Posts</h4>
