--- a/resources/post-1018.html
+++ b/resources/post-1018.html
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3>Welcome to CASA!</h3>
-          <p>by Raghavendra Pradyumna Pothukuchi and Elba Garza on Oct 18, 2020</p>
+          <p>by <u>Raghavendra Pradyumna Pothukuchi</u> and <u>Elba Garza</u> on Oct 18, 2020</p>
           <p>We are very excited to bring to you the first blog post of CASA! There has been a lot of work in setting up CASA, and several people have worked hard for it, and here we are, finally! CASA is founded so that we, students, become a strong, healthy, happy and productive community. Yes, those are many adjectives to strive for and that is why we have CASA. 
           <br><br>
           As many of you might already know from experience, studentship – particularly graduate studentship can be quite a struggle. Be it coping with the stressful academic work, trying to make yourself known in the community, developing friends, dealing with personal difficulties, or being in the unknown about how to handle a situation, there are several times when we feel we are alone and are facing an uphill battle. Unfortunately, as students, we have not had a strong support system that could help us face these challenges. CASA is established to fill that void. 
