--- a/resources/index.html
+++ b/resources/index.html
@@ -84,6 +84,40 @@
             <p>
               <a href="https://people.eecs.berkeley.edu/~pattrsn/talks/BadTalk.pdf">How to Give a Bad Talk - David Patterson</a>
             </p>
+
+            <p>
+              <a href="http://svr-sk818-web.cl.cam.ac.uk/keshav/papers/07/paper-reading.pdf">How to read a paper - S. Keshav</a>
+            </p>
+
+            <p>
+              <a href="https://zhiyunq.medium.com/how-to-look-for-ideas-in-computer-science-research-7a3fa6f4696f">How to get research ideas in CS? - Zhiyun Qian</a>
+            </p>
+
+            <p>
+              <a href="https://www.sigops.org/2021/how-are-award-winning-systems-research-artifacts-prepared-part-1/">How Are Award-winning Systems Research Artifacts Prepared - Tianyin Xu</a>
+            </p>
+
+            <p>
+              <a href="http://people.inf.ethz.ch/troscoe/pubs/review-writing.pdf">Writing reviews for systems conferences - Timothy Roscoe</a>
+            </p>
+
+            <p>
+              <a href="https://www.sigarch.org/tips-for-a-new-computer-architecture-phd-student/">Tips for a New Computer Architecture PhD Student</a>
+            </p>
+
+            <h4>Technical Resources </h4>
+            <p>
+              <a href="https://education.github.com/pack">GitHub Student Developer Pack</a>
+            </p>
+              <a href="https://azure.microsoft.com/en-us/free/students/">Azure for Students</a>
+            <p>
+
+            <p>
+              <a href="https://aws.amazon.com/blogs/aws/aws-educate-credits-training-content-and-collaboration-for-students-educators/">AWS Educate</a>
+            </p>
+              
+            </p>
+
             <h4>Community Organizations</h4>
             <ul>
               <li>
