updated pages for HPCA.

--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
 
               <div class="about-officer-column">
                 <img src="images/sc/Raghavendra.jpg" alt="" style="width:72%">
-                <p style="margin-top: 10px"><a href="https://pothukuchi.web.illinois.edu/">Raghavendra Pradyumna Pothukuchi</a></br>University of Illinois at Urbana-Champaign</p> 
+                <p style="margin-top: 10px"><a href="https://pothukuchi.web.illinois.edu/">Raghavendra Pradyumna Pothukuchi</a></br>Yale University</p> 
               </div>
 
             </div>
@@ -132,7 +132,7 @@
 
               <div class="about-officer-column">
                 <img src="images/sc/Abdulrahman.jpg" alt="" style="width:70.5%">
-                <p style="margin-top: 10px"><a href="http://amahmou2.web.engr.illinois.edu/">Abdulrahman Mahmoud</a> </br>University of Illinois at Urbana-Champaign</p>
+                <p style="margin-top: 10px"><a href="http://amahmou2.web.engr.illinois.edu/">Abdulrahman Mahmoud</a> </br>Harvard University</p>
               </div>
 
               <div class="about-officer-column">
