--- a/events/index.html
+++ b/events/index.html
@@ -48,10 +48,40 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
+          <h3>March 2021</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-info">
+            <div class="small">
+              Monday, March 1 &ndash; Wednesday, March 3
+            </div>
+            <h5>CASA at HPCA 2021</h5>
+            <p>CASA will be presenting at the HPCA Business meeting (13:30 - 14:30 EST / 10:30 - 11:30 PST, Monday). We certainly look forward to meeting you at HPCA! If you would like to, please also come say hi or leave a comment / question about CASA on our Whova post! :D
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
           <h3>October 2020</h3>
         </div>
       </div>
       <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-dark">
+            <div class="small">
+              Monday, October 19 &ndash; Wednesday, October 21
+            </div>
+            <h5>CASA at MICRO 2020</h5>
+            <p>
+              CASA will be helping to organize the Meet-a-Senior-Architect and Meet-a-Senior-Student at MICRO 2020.  If you're a student who is registered for MICRO, we encourage you to take part in both of these programs!
+            </p>
+          </div>
+        </div>
+
         <div class="col-xs-12 col-md-4">
           <div class="alert alert-dark">
             <div class="small">
@@ -71,17 +101,6 @@
             <h5><a href="https://sites.google.com/view/uarch2020/">uArch Workshop</a></h5>
             <p>
               An intro for undergraduate and Master's students to research and career opportunities in the field of computer architecture in particular and graduate school lifestyle and survival skills in general.
-            </p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <div class="alert alert-info">
-            <div class="small">
-              Monday, October 19 &ndash; Wednesday, October 21
-            </div>
-            <h5>CASA at MICRO 2020</h5>
-            <p>
-              CASA will be helping to organize the Meet-a-Senior-Architect and Meet-a-Senior-Student at MICRO 2020.  If you're a student who is registered for MICRO, we encourage you to take part in both of these programs!
             </p>
           </div>
         </div>
