--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <h4 class="font-italic">Upcoming Events</h4>
             <ol class="list-unstyled mb-0">
               <li class="mb-3">
-                MICRO 2020
-                <i>(October 19&ndash;21, 2020)</i><br/>
-                <span class="small font-muted">CASA will be helping to organize the Meet-A-Senior-Architect and Meet-A-Senior-Student at MICRO 2020</span>
+                HPCA 2021
+                <i>(March 01&ndash;03, 2021)</i><br/>
+                <span class="small font-muted">CASA will be presenting at the HPCA Business meeting (13:30 - 14:30 EST / 10:30 - 11:30 PST, Monday). We look forward to meeting you!</span>
               </li>
             </ol>
             
