--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <li class="mb-3">
                 HPCA 2021
                 <i>(March 01&ndash;03, 2021)</i><br/>
-                <span class="small font-muted">CASA will be presenting at the HPCA Business meeting (13:30 - 14:30 EST / 10:30 - 11:30 PST, Monday). We look forward to meeting you! Meanwhile, we are conducting a survey regarding both <b>Long-Term</b> and <b>Short-Term mentoring </b>. Please fill out this <a href="https://forms.gle/mSKniXwMYBUFF57M6">form</a> if you are interested in finding a mentor.</span>
+                <span class="small font-muted">CASA will be presenting at the HPCA Business meeting (13:30 - 14:30 EST / 10:30 - 11:30 PST, Monday). We look forward to meeting you! Meanwhile, we are doing a survey regarding both <b>Long-Term</b> and <b>Short-Term mentoring </b>. Please fill out this <a href="https://forms.gle/mSKniXwMYBUFF57M6">form</a> if you are interested in finding a mentor.</span>
               </li>
             </ol>
             
