PhD Balance mentor health event coming up.

--- a/events/index.html
+++ b/events/index.html
@@ -52,8 +52,21 @@
         </div>
       </div>
       <div class="row">
+
         <div class="col-xs-12 col-md-4">
           <div class="alert alert-info">
+            <div class="small">
+              Friday, March 19
+            </div>
+            <h5>PhD Mental Health Balance</h5>
+            <p><a href="https://twitter.com/PhD_Balance">PhD Balance</a> and CASA are presenting a two-part event on the intersection of your PhD journey and mental health. This event has two components: a keynote on mental health in academia, and a workshop on how to work and communicate with your advisor. Each part 1.5 hours in duration, for a total of 3 hours. Please register <a href="https://tinyurl.com/phdbalance">here</a>. ❤
+            </p>
+          </div>
+        </div>
+
+
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-dark">
             <div class="small">
               Monday, March 1 &ndash; Wednesday, March 3
             </div>
@@ -63,6 +76,37 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h3>January - February 2021</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-dark">
+            <div class="small">
+              Friday, February 26
+            </div>
+            <h5><a href="https://www.sigarch.org/introducing-the-archchat-social-hour-connecting-computer-architects-everywhere/">ArchChat Social Hour</a></h5>
+            <p>The ArchChat Social Hour is a fully-virtual monthly social event organized jointly by CASA and PLTea. This is our second ArchChat Social Hour! We will meet on February 26th, 2021 at 11 AM ET. Please register via <a href="https://tamu.zoom.us/meeting/register/tJIlcOqgqz8iEtAd63-iqSqQMNN9h2taZOVG">this Zoom registration link</a>. Chat with you soon!
+            </p>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <div class="alert alert-dark">
+            <div class="small">
+              Thursday, January 14
+            </div>
+            <h5><a href="https://www.sigarch.org/introducing-the-archchat-social-hour-connecting-computer-architects-everywhere/">ArchChat Social Hour</a></h5>
+            <p>The ArchChat Social Hour is a fully-virtual monthly social event organized jointly by CASA and PLTea. This is our first ArchChat Social Hour! We will meet on January 14th, 2021 at 3 PM ET. Please register via <a href="https://tamu.zoom.us/meeting/register/tJUvcuirrDorH9PUJ7oe27BNRCUrNWDNjmC5">this Zoom registration link</a>. Chat with you soon!
+            </p>
+          </div>
+        </div>
+
+      </div>
+
 
       <div class="row">
         <div class="col-md-12">
