--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <h4 class="font-italic">Upcoming Events</h4>
             <ol class="list-unstyled mb-0">
               <li class="mb-3">
-                HPCA 2021
-                <i>(March 01&ndash;03, 2021)</i><br/>
-                <span class="small font-muted">CASA will be presenting at the HPCA Business meeting (13:30 - 14:30 EST / 10:30 - 11:30 PST, Monday). We look forward to meeting you! Meanwhile, we are doing a survey regarding both <b>Long-Term</b> and <b>Short-Term mentoring </b>. Please fill out this <a href="https://forms.gle/mSKniXwMYBUFF57M6">form</a> if you are interested in finding a mentor.</span>
+                <b>PhD Mental Health Balance Event</b>
+                <i>(15:00 - 18:00 ET, March 19, 2021)</i><br/>
+                <span>Together with <a href="https://twitter.com/PhD_Balance">PhD Balance</a>, we are presenting a two-part event on the intersection of your PhD journey and mental health! Please read more about the event and register <a href="https://tinyurl.com/phdbalance">here</a>. ❤️ </span>
               </li>
             </ol>
             
