added links to applying-to-grad-school talk recordings.

--- a/resources/index.html
+++ b/resources/index.html
@@ -77,7 +77,16 @@
       <div class="row">
         <div class="col-md-12">
           <h3>External Resources</h3>
-            <h4>Talks / Posts</h4>
+            <br>
+            <h4>Applying to Graduate School</h4>
+            <p>"How To Apply To Grad School" - Talk Recordings from <a href="https://sites.google.com/view/uarch2020/home#h.p_73kGRl1kI8Nf">The uArch 2020 Panel on Applying to Grad School</a>: <br>
+            -- From <a href="https://drive.google.com/file/d/13efHqJU5w6DE6QU0v505ALwu6un_gheN/view?usp=sharing">Prof. Natalie Enright Jerger</a> <br>
+            -- From <a href="https://drive.google.com/file/d/1X4wt0FwpqgN1pDeOyKETXmKyMX_VIu_n/view?usp=sharing">Prof. Dean Tullsen</a> <br>
+            -- From <a href="https://drive.google.com/file/d/1q4k6tWt6_7FvrWnVgNSyVWLMq1lJ_Wy8/view?usp=sharing">Prof. Lieven Eeckhout</a> <br>
+            -- From <a href="https://drive.google.com/file/d/1xLgfNU8g5j9XTzgUEEeq6edr5_lLWtkg/view?usp=sharing">Prof. Yoav Etsion</a>
+            </p>
+
+            <h4>Research (in general)</h4>
             <p>
               <a href="https://www.youtube.com/watch?v=Rn1w4MRHIhc">How to Have a Bad Career | David Patterson | Talks at Google</a>
             </p>
