--- a/about/index.html
+++ b/about/index.html
@@ -150,7 +150,7 @@
 
               <div class="about-officer-column">
                 <img src="images/sc/Gururaj.jpg" alt="" style="width:70%">
-                <p style="margin-top: 10px"><a href="https://sites.google.com/site/gururajshome/home">Gururaj Saileshwar</a> </br>Georgia Institute of Technology</p>
+                <p style="margin-top: 10px"><a href="https://gururaj-s.github.io/">Gururaj Saileshwar</a> </br>Georgia Institute of Technology</p>
               </div>
 
               <div class="about-officer-column">
