--- a/resources/casa-isca-flyer/summer-22-dei-reading.html
+++ b/resources/casa-isca-flyer/summer-22-dei-reading.html
@@ -23,6 +23,7 @@
           padding-bottom: 4em;
           font-size: 1.5em;
           margin: 0 !important;
+          font-family: sans-serif;
       }
 
       .emph {
