--- a/resources/casa-isca-flyer/summer-22-dei-reading.html
+++ b/resources/casa-isca-flyer/summer-22-dei-reading.html
@@ -2,8 +2,7 @@
   <head>
     <title>Summer 2022 DEI Reading Group</title>
     <link rel="stylesheet" href="arrows.css">
-    <link href="https://db.onlinewebfonts.com/c/8af4f981069f65fe3806caf753e04464?family=Karumbi" rel="stylesheet" type="text/css"/> 
-    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
+    <link rel="stylesheet" href="fonts.css">
     <style>
       .title {
           font-size: 5em;
@@ -24,8 +23,7 @@
       .panel {
           padding-left: 20%;
           padding-right: 20%; 
-          width: 60%;
-          font-size: 1.5em;
+          font-size: min(2.5vh, 4vw);
           margin: 0 !important;
           font-family: sans-serif;
           height: 100vh;
@@ -35,14 +33,14 @@
       }
 
       .panel-content {
-          padding-top: 4em;
-          padding-bottom: 4em;
+          padding-top: 10vh;
+          padding-bottom: 10vh;
       }
 
       .emph {
           padding-top: 0.5em;
           padding-bottom: 0.5em;
-          font-size: 3em;
+          font-size: min(8vh, 8vw);
           font-style: italic;
           font-family: 'Open Sans', sans-serif;
       }
@@ -96,6 +94,19 @@
       .casa-logo {
           filter: brightness(4%);
       }
+
+      @media only screen and (max-width: 720px) {
+        .panel {
+              padding-left: 10%;
+              padding-right: 10%; 
+          }
+      }  
+      @media only screen and (max-width: 480px) {
+        .panel {
+              padding-left: 5%;
+              padding-right: 5%; 
+          }
+      }  
     </style>
   </head>
   <body>
@@ -125,7 +136,7 @@
         <div class="ref dark-links">
           From <a href="https://www.sigarch.org/what-happens-to-us-does-not-happen-to-most-of-you/">What Happens to Us Does Not Happen to Most of You</a>
         </div>
-        <br>
+        <br><br>
         <a href="javascript:void" onclick="nextPage('panel2');">
           <svg class="arrows dark-svg">
             <path class="a1" d="M0 0 L30 32 L60 0"></path>
@@ -147,7 +158,7 @@
         <div class="ref light-links">
           From <a href="https://www.susanjfowler.com/blog/2017/2/19/reflecting-on-one-very-strange-year-at-uber"> Reflecting on one very, very strange year at Uber</a>
         </div>
-        <br>
+        <br><br>
         <a href="javascript:void" onclick="nextPage('panel3');">
           <svg class="arrows">
             <path class="a1" d="M0 0 L30 32 L60 0"></path>
@@ -171,7 +182,7 @@
           From <a href="https://www.nature.com/scitable/content/does-gender-matter-by-ben-a-barres-10602856/">Does
             Gender Matter? by Ben A Barres</a>
         </div>
-        <br>
+        <br><br>
         <a href="javascript:void" onclick="nextPage('panel4');">
           <svg class="arrows">
             <path class="a1" d="M0 0 L30 32 L60 0"></path>
@@ -204,5 +215,8 @@
         document.getElementById(nextId).scrollIntoView({behavior: 'smooth'});
     }
   </script>
+  <link href="https://db.onlinewebfonts.com/c/8af4f981069f65fe3806caf753e04464?family=Karumbi" rel="stylesheet" type="text/css"/> 
+  <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
+
   </body>
 </html>
